--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -13,9 +13,9 @@
 
     <fragment
         android:id="@+id/navigation_category"
-        android:name="com.ict2105.ict2105_prototype.ui.home.HomeFragment"
+        android:name="com.ict2105.ict2105_prototype.ui.category.CategoryFragment"
         android:label="@string/title_category"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_category" />
 
     <fragment
         android:id="@+id/navigation_organization"
