--- a/app/src/main/res/layout/fragment_category.xml
+++ b/app/src/main/res/layout/fragment_category.xml
@@ -29,7 +29,7 @@
                 android:clickable="true"
                 android:focusable="auto"
                 android:visibility="visible"
-                app:cardCornerRadius="40dp">
+                app:cardCornerRadius="2dp">
 
                 <ImageView
                     android:id="@+id/imageView2"
@@ -40,6 +40,12 @@
                     android:fadingEdgeLength="120dp"
                     android:scaleX="2"
                     android:src="@drawable/book" />
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="TextView" />
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
