--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,8 @@
                 android:id="@+id/editTextUsername"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:maxLines="1"
+                android:inputType="text"
                 android:hint="@string/username" />
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -45,6 +47,7 @@
                 android:id="@+id/editTextPassword"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:maxLines="1"
                 android:inputType="textPassword"
                 android:hint="@string/password" />
         </com.google.android.material.textfield.TextInputLayout>
