--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -35,6 +35,8 @@
                     android:id="@+id/editTextUsername"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:maxLines="1"
+                    android:inputType="text"
                     android:hint="@string/username" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -48,12 +50,13 @@
                     android:id="@+id/editTextPassword"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:maxLines="1"
                     android:inputType="textPassword"
                     android:hint="@string/password" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/layout_confimPassword"
+                android:id="@+id/layout_confirmPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20sp">
@@ -62,6 +65,7 @@
                     android:id="@+id/editTextConfirmPassword"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:maxLines="1"
                     android:inputType="textPassword"
                     android:hint="@string/confirm_password" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -78,7 +82,7 @@
                     android:id="@+id/btnLogin"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginRight="20sp"
+                    android:layout_marginEnd="20sp"
                     android:text="@string/back"
                     android:textSize="15sp"
                     android:textColor="@color/pink"
