--- a/app/src/main/res/menu/appbar_menu.xml
+++ b/app/src/main/res/menu/appbar_menu.xml
@@ -3,9 +3,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_one"
+        android:id="@+id/action_chat"
         android:icon="@drawable/ic_chat_bubble_black_24dp"
         app:showAsAction="always"
-        android:title="Item One"/>
+        android:title="@string/title_chat"/>
+
+    <item
+        android:id="@+id/action_menu"
+        android:icon="@drawable/ic_more_vert_black_24dp"
+        app:showAsAction="always"
+        android:title="@string/title_vert_menu">
+
+        <menu>
+            <item
+                android:id="@+id/action_logout"
+                android:icon="@drawable/ic_power_settings_new_black_24dp"
+                android:title="@string/logout" />
+        </menu>
+
+    </item>
 
 </menu>
