--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -3,91 +3,88 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="?android:attr/actionBarSize">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/profileCardView"
+        <LinearLayout
+            android:id="@+id/linearLayoutProfile"
             android:layout_width="match_parent"
-            android:layout_height="279dp"
-            android:background="#81251EE4"
-            android:textAlignment="center"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="2dp">
+            android:layout_height="wrap_content"
+            android:padding="15sp"
+            android:orientation="vertical">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/dpBorderCardView"
-                android:layout_width="147dp"
-                android:layout_height="135dp"
-                android:layout_marginTop="28dp"
-                app:cardBackgroundColor="#E91E63"
-                app:cardCornerRadius="300dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_width="@dimen/profile_image_size"
+                android:layout_height="@dimen/profile_image_size"
+                app:cardBackgroundColor="@color/pink"
+                app:cardCornerRadius="300dp">
 
                 <ImageView
                     android:id="@+id/userDPImageView"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:srcCompat="@drawable/ic_group_24px" />
+                    android:layout_height="@dimen/profile_image_size"
+                    app:srcCompat="@drawable/ic_person_black_24dp" />
 
             </androidx.cardview.widget.CardView>
 
             <TextView
-                android:id="@+id/usernameTextView"
-                android:layout_width="212dp"
-                android:layout_height="23dp"
-                android:layout_marginTop="16dp"
+                android:id="@+id/textViewUsername"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="@string/username"
-                android:textAlignment="center"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dpBorderCardView" />
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/textViewBio"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/default_bio"
+                android:textSize="16sp" />
 
             <RatingBar
                 android:id="@+id/userRatingBar"
-                android:layout_width="244dp"
-                android:layout_height="44dp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/usernameTextView" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                style="?android:attr/ratingBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:numStars="5"
+                android:rating="5" />
 
-        <TextView
-            android:id="@+id/descriptionTextView"
-            android:layout_width="379dp"
-            android:layout_height="77dp"
-            android:layout_marginTop="8dp"
-            android:text="TextView"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/profileCardView" />
+            <com.google.android.material.button.MaterialButton
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:id="@+id/btnEdit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15sp"
+                android:text="@string/edit_profile"
+                android:textSize="12sp"
+                android:textColor="@color/pink"
+                android:textAllCaps="false"
+                app:backgroundTint="@color/white"
+                app:strokeColor="@color/pink"
+                app:strokeWidth="2dp" />
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/descriptionTextView">
+            <View
+                android:id="@+id/horizontal_divider"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/light_gray"/>
 
-            <GridView
-                android:id="@+id/listingGridView"
-                android:layout_width="408dp"
-                android:layout_height="354dp"
-                android:animateLayoutChanges="true"
-                android:columnWidth="100dp"
-                android:listSelector="@drawable/book"
-                android:numColumns="auto_fit">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewItemList"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="10sp"
+                app:layout_constraintTop_toBottomOf="@+id/horizontal_divider"/>
 
-            </GridView>
-        </FrameLayout>
+        </LinearLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
