--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
@@ -8,6 +9,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:minWidth="180sp"
         android:minHeight="200sp"
         card_view:cardCornerRadius="6dp"
         card_view:cardElevation="3dp"
@@ -16,21 +19,49 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_margin="5dp"
             android:orientation="vertical"
             android:padding="5dp">
 
             <ImageView
                 android:id="@+id/imageViewItem"
-                android:layout_width="200sp"
-                android:layout_height="200sp"
+                android:layout_width="match_parent"
+                android:layout_height="150sp"
                 card_view:srcCompat="@drawable/clothes" />
 
             <TextView
                 android:id="@+id/textViewItemName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="textview"/>
+                android:text="@string/item_name"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/dpBorderCardView"
+                    android:layout_width="20sp"
+                    android:layout_height="20sp"
+                    app:cardBackgroundColor="@color/pink"
+                    app:cardCornerRadius="300dp">
+
+                    <ImageView
+                        android:id="@+id/userDPImageView"
+                        android:layout_width="match_parent"
+                        android:layout_height="20sp"
+                        app:srcCompat="@drawable/ic_person_black_24dp" />
+
+                </androidx.cardview.widget.CardView>
+
+                <TextView
+                    android:id="@+id/textViewUsername"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="10sp"
+                    android:text="@string/username"/>
+
+            </LinearLayout>
 
         </LinearLayout>
 
