--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -18,43 +18,51 @@
             android:padding="15sp"
             android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/dpBorderCardView"
-                android:layout_width="@dimen/profile_image_size"
-                android:layout_height="@dimen/profile_image_size"
-                app:cardBackgroundColor="@color/pink"
-                app:cardCornerRadius="300dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical">
 
-                <ImageView
-                    android:id="@+id/userDPImageView"
-                    android:layout_width="match_parent"
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/dpBorderCardView"
+                    android:layout_width="@dimen/profile_image_size"
                     android:layout_height="@dimen/profile_image_size"
-                    app:srcCompat="@drawable/ic_person_black_24dp" />
+                    app:cardBackgroundColor="@color/pink"
+                    app:cardCornerRadius="300dp">
 
-            </androidx.cardview.widget.CardView>
+                    <ImageView
+                        android:id="@+id/userDPImageView"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/profile_image_size"
+                        app:srcCompat="@drawable/ic_person_black_24dp" />
 
-            <TextView
-                android:id="@+id/textViewUsername"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/username"
-                android:textSize="18sp"
-                android:textStyle="bold" />
+                </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:id="@+id/textViewBio"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/default_bio"
-                android:textSize="16sp" />
+                <TextView
+                    android:id="@+id/textViewUsername"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/username"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
-            <RatingBar
-                android:id="@+id/userRatingBar"
-                style="?android:attr/ratingBarStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:numStars="5"
-                android:rating="5" />
+                <TextView
+                    android:id="@+id/textViewBio"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/default_bio"
+                    android:textSize="16sp" />
+
+                <RatingBar
+                    android:id="@+id/userRatingBar"
+                    style="?android:attr/ratingBarStyleSmall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:numStars="5"
+                    android:rating="5" />
+
+            </LinearLayout>
 
             <com.google.android.material.button.MaterialButton
                 style="@style/Widget.AppCompat.Button.Colored"
