--- a/app/src/main/res/menu/appbar_menu.xml
+++ b/app/src/main/res/menu/appbar_menu.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/action_request"
+        android:icon="@drawable/ic_assignment_black_24dp"
+        app:showAsAction="always"
+        android:title="@string/title_request"/>
+
+    <item
         android:id="@+id/action_chat"
         android:icon="@drawable/ic_chat_bubble_black_24dp"
         app:showAsAction="always"
